<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="28dp"
        android:textColor="#FFEBEE"
        android:id="@+id/question_text_view"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:id="@+id/true_button"/>


        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:id="@+id/false_button"/>

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:id="@+id/previous_button"
            android:text="@string/previous_button"
            android:src="@drawable/previous"/>
        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button" />
        <ImageButton
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:id="@+id/next_button"
            android:text="@string/next_button"
            android:src="@drawable/next" />

    </LinearLayout>
</LinearLayout>